[gd_scene load_steps=9 format=2]

[ext_resource path="res://Ship.tscn" type="PackedScene" id=1]
[ext_resource path="res://Game.gd" type="Script" id=2]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=3]
[ext_resource path="res://Laser.tscn" type="PackedScene" id=4]
[ext_resource path="res://Enemy.tscn" type="PackedScene" id=5]
[ext_resource path="res://Health.tscn" type="PackedScene" id=6]
[ext_resource path="res://Battery.tscn" type="PackedScene" id=7]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 55, -74, 0, 0, 0, 0, 965, -80 )
}

[node name="Game" type="CanvasLayer"]
script = ExtResource( 2 )
enemy_scene = ExtResource( 5 )
laser_scene = ExtResource( 4 )
health_scene = ExtResource( 6 )
battery_scene = ExtResource( 7 )

[node name="Ship" parent="." instance=ExtResource( 1 )]

[node name="FireRateTimer" type="Timer" parent="."]
wait_time = 0.333

[node name="EnemySpawnTimer" type="Timer" parent="."]

[node name="EnemyPath" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="EnemySpawnLocation" type="PathFollow2D" parent="EnemyPath"]
position = Vector2( 55, -74 )
rotation = -0.00659588

[node name="HUD" parent="." instance=ExtResource( 3 )]

[node name="FireRatePowerUpTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="PowerUpSpawnStart" type="Position2D" parent="."]
position = Vector2( 35, 326 )

[node name="PowerUpSpawnEnd" type="Position2D" parent="."]
position = Vector2( 986, 565 )

[node name="PowerUpSpawnTimer" type="Timer" parent="."]

[connection signal="new_game" from="." to="." method="new_game"]
[connection signal="fire_rate_powerup" from="Ship" to="." method="_on_Ship_fire_rate_powerup"]
[connection signal="health_powerup" from="Ship" to="." method="_on_Ship_health_powerup"]
[connection signal="ship_hit" from="Ship" to="." method="_on_Ship_ship_hit"]
[connection signal="timeout" from="FireRateTimer" to="." method="_on_FireRateTimer_timeout"]
[connection signal="timeout" from="EnemySpawnTimer" to="." method="_on_EnemySpawnTimer_timeout"]
[connection signal="timeout" from="FireRatePowerUpTimer" to="." method="_on_FireRatePowerUpTimer_timeout"]
[connection signal="timeout" from="PowerUpSpawnTimer" to="." method="_on_PowerUpSpawnTimer_timeout"]
